--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       font-size: 16px;
     }
     #uploadBtn {
-      background-color: black;
+      background-color: blue;
     }
     #processBtn {
       background-color: blue;
@@ -35,7 +35,7 @@
     }
     #scaleInput {
       color: black;
-      font-size: 16px;
+      font-size: 48px;
       margin: 10px;
     }
     canvas {
